# rsvp

./: .gitignore  Cargo.toml  Readme.md  build_installer.ps1  configuration.toml  installer.iss  output_gif.txt  solutions.md
.github/workflows/: main.yml
rsvp/: format.rsvp
src/: audio.rs  color.rs  config.rs  constant.rs  content_parser.rs  dead_code.rs  io.rs  lib.rs  main.rs  processing.rs  renderer.rs  rsvp.rs  scheduler.rs  spiral.rs  tests.rs  utils.rs
web/: index.html
